--- a/.flowconfig
+++ b/.flowconfig
@@ -13,6 +13,8 @@
 ; large dirs that are not imported
 <PROJECT_ROOT>/docs/.*
 <PROJECT_ROOT>/pkg/nuclide-debugger/VendorLib/devtools/.*
+; Shim for local only build
+<PROJECT_ROOT>/pkg/local-remote-connection/.*
 
 [libs]
 flow-libs/
